# robot

./: README.md
arduino/: StepperMotorControlUnit.ino  pidController.ino  ultrasonic_triple.ino
custom interfaces/: CMakeLists.txt  package.xml
custom interfaces/msg/: FaceCoordinates.msg  UltrasonicSensorStatus.msg
machine2_bringup/: CMakeLists.txt  package.xml
machine2_bringup/config/: machine_controller.yaml
machine2_bringup/launch/: machine.launch.py  send_trajectory.launch.py
machine2_controllers/: CMakeLists.txt  package.xml
machine2_controllers/include/machine2_controllers/: machine2_controller.hpp
machine2_controllers/src/: machine2_controller.cpp  machine2_controller_plugin.xml
machine2_description/: CMakeLists.txt  package.xml
machine2_description/urdf/: machine2.urdf.xacro
machine2_hardware_interfaces/: CMakeLists.txt  package.xml
machine2_hardware_interfaces/include/machine2_hardware_interfaces/: machine2_hardware_interface.hpp
machine2_hardware_interfaces/src/: machine2_hardware_interface.cpp  machine2_hardware_interface_plugin.xml
machine2_moveit/: CMakeLists.txt  package.xml
machine2_moveit/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  machine.srdf  moveit_controllers.yaml
machine2_moveit/launch/: moveit.launch.py
machine2_moveit/src/: move_group_interface.cpp
main pkg/: package.xml  setup.py
main pkg/robot_main_pkg/: computer_vision_node.py  led_control_node.py  lidar_comms_node.py  motor_control_node.py  ultrasonic_sensors_node.py
robot bringup/: CMakeLists.txt  package.xml
robot bringup/launch/: robot_launch.py
robot description/: CMakeLists.txt  package.xml
robot description/launch/: display.launch.py
robot description/rviz/: urdf_config.rviz
robot description/urdf/: robot.urdf.xacro
